--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
           </section>
           <style>
             .values-section {
-              height: 90vh;
+              height: 100vh;
               overflow: visible;
               position: relative;
               background: white;
@@ -229,7 +229,7 @@
               font-size: clamp(2rem, 5.2vw, 4rem);
               line-height: 1.1;
               margin-bottom: clamp(1.25rem, 3.2vw, 2rem);
-              opacity: 0.3;
+              opacity: 1 !important;
               color: black;
               transition: opacity 0.5s ease;
             }
