--- a/about.html
+++ b/about.html
@@ -240,7 +240,12 @@
 
             @media (max-width: 991.98px) {
               .values-left {
+                padding: 0;
+                height: 20vh !important;
                 justify-content: center;
+              }
+              .values-section {
+                height: 100% !important;
               }
               .values-left h2 {
                 text-align: center;
@@ -277,7 +282,7 @@
               top: 50%;
               left: 50%;
               width: 900px;
-              color: white;
+              color: rgb(0, 0, 0);
               transform: translate(-50%, -50%);
               position: absolute;
             }
