--- a/about.html
+++ b/about.html
@@ -267,6 +267,7 @@
               align-items: center;
               justify-content: center;
               text-align: center;
+              background-color: #dcefff;
               position: relative;
             }
             .we-are-cw-img {
@@ -282,7 +283,7 @@
               top: 50%;
               left: 50%;
               width: 900px;
-              color: rgb(0, 0, 0);
+              color: rgb(255, 255, 255);
               transform: translate(-50%, -50%);
               position: absolute;
             }
