--- a/about.html
+++ b/about.html
@@ -261,6 +261,7 @@
           </section>
           <style>
             .we-are-cw-main {
+              margin-top: 55px;
               height: 100vh;
               width: 100%;
               display: flex;
